--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+/* Headrer */
+
 header{
     position: sticky;
+    background: rgb(61, 84, 187);
+
     top: 0%;
+    width: 100%;
+    height: 100%;
     }
+
+/* main */
+body{
+    width: 100%;
+    margin: 150px
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+}
 
 main div {
     border: 50% palevioletred ;
@@ -15,8 +30,16 @@ div img {
     height: 30%;
 }
 
+
+
+
+/* Footer */
 footer{
-    bottom: 0%;
     position: sticky;
+    background: rgb(61, 84, 187);
+    width: 100%;
+    height: 100%;
+    bottom: 0%;
+
 
 }
